--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # dependencies
 /node_modules
 /.pnp
+/.idea/*
 .pnp.js
 
 # testing
@@ -22,3 +23,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 /.env
+/.idea/modules.xml
+/.idea/vcs.xml
+/.idea/workspace.xml
+
+
