--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "axios": "^0.21.1",
     "google-map-react": "^2.1.9",
     "mime": "^1.6.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-controllables": "^0.6.0",
     "react-dom": "^17.0.2",
     "react-geolocated": "^3.2.0",
     "react-scripts": "4.0.3",
