--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
+    "react-bootstrap-icons": "^1.5.0",
     "react-controllables": "^0.6.0",
     "react-dom": "^17.0.2",
     "react-geolocated": "^3.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2",
-    "react-bootstrap-icons": "^1.5.0"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "HTTPS=true SSL_CRT_FILE=./.mycert/localhost.crt SSL_KEY_FILE=./.mycert/localhost.key react-scripts start",
