--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-qr-scanner": "^1.0.0-alpha.7",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "sha256": "^0.2.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
