--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
     "react-bootstrap-icons": "^1.5.0",
+    "react-burger-menu": "^3.0.6",
     "react-controllables": "^0.6.0",
     "react-dom": "^17.0.2",
     "react-geolocated": "^3.2.0",
