--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mapquest-react",
-  "version": "0.0.2",
+  "version": "0.9",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
@@ -28,7 +28,7 @@
   "scripts": {
     "start": "HTTPS=true SSL_CRT_FILE=./.cert/localhost.crt SSL_KEY_FILE=./.cert/localhost.key react-scripts start",
     "startwin": "react-scripts start set HTTPS=true SSL_CRT_FILE=./.mycert/localhost.crt SSL_KEY_FILE=./.mycert/localhost.key react-scripts start",
-    "build": "react-scripts build",
+    "build": "node generate-build.js && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
