--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "HTTPS=true SSL_CRT_FILE=./.cert/localhost.crt SSL_KEY_FILE=./.cert/localhost.key react-scripts start",
+    "start": "HTTPS=true SSL_CRT_FILE=./.crt/localhost.crt SSL_KEY_FILE=./.crt/localhost.key react-scripts start",
     "startwin": "react-scripts start set HTTPS=true SSL_CRT_FILE=./.mycert/localhost.crt SSL_KEY_FILE=./.mycert/localhost.key react-scripts start",
     "build": "node generate-build.js && react-scripts build",
     "test": "react-scripts test",
