--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "google-map-react": "^2.1.9",
     "mime": "^1.6.0",
     "prop-types": "^15.7.2",
+    "qrcode.react": "^1.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
     "react-bootstrap-icons": "^1.5.0",
