--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-controllables": "^0.6.0",
     "react-dom": "^17.0.2",
     "react-geolocated": "^3.2.0",
+    "react-qr-code": "^1.1.1",
     "react-qr-scanner": "^1.0.0-alpha.7",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
